<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>pt.uminho.haslab.pardinus</groupId>
	<artifactId>pardinus</artifactId>
	<version>0.3.1</version>
	<packaging>jar</packaging>
	<name>pardinus</name>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>exec-maven-plugin</artifactId>
										<versionRange>[1.2.1,)</versionRange>
										<goals>
											<goal>java</goal>
											<goal>exec</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>git submodule update</id>
						<phase>initialize</phase>
						<configuration>
							<executable>git</executable>
							<arguments>
								<argument>submodule</argument>
								<argument>update</argument>
								<argument>--init</argument>
								<argument>--recursive</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<id>waf download</id>
						<phase>validate</phase>
						<configuration>
							<executable>wget</executable>
							<arguments>
								<argument>http://waf.io/waf-1.8.12</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<id>waf chmod</id>
						<phase>validate</phase>
						<configuration>
							<executable>chmod</executable>
							<arguments>
								<argument>u+x</argument>
								<argument>waf-1.8.12</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<id>waf build</id>
						<phase>validate</phase>
						<configuration>
							<executable>./waf-1.8.12</executable>
							<arguments>
								<argument>configure</argument>
								<argument>--lib</argument>
								<argument>--prefix=.</argument>
								<argument>--libdir=src/main/resources</argument>
								<argument>build</argument>
								<argument>install</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<id>waf clean</id>
						<phase>validate</phase>
						<configuration>
							<executable>./waf-1.8.12</executable>
							<arguments>
								<argument>distclean</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
					<execution>
						<id>waf del</id>
						<phase>validate</phase>
						<configuration>
							<executable>rm</executable>
							<arguments>
								<argument>waf-1.8.12</argument>
							</arguments>
						</configuration>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<useDefaultFilterDelimiters>false</useDefaultFilterDelimiters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20.1</version>
				<inherited>false</inherited>
				<configuration>
					<argLine>-Djava.library.path=${project.basedir}/src/main/resources</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<properties>
		<logback-version>1.1.7</logback-version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.sat4j</groupId>
			<artifactId>org.sat4j.maxsat</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.sat4j</groupId>
			<artifactId>org.sat4j.pb</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.sat4j</groupId>
			<artifactId>org.sat4j.core</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback-version}</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>